# hic-sunt

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.md  clang-asan.native.ini  clang.native.ini  meson.build
core/: AGENTS.md  meson.build
core/geometry/: axis.hpp  box.hpp  coord_system.cpp  coord_system.hpp  coords.hpp  coords.inl  coords_test.cpp  direction.hpp  meson.build  surface.hpp  surface.inl  surface_raw_view.hpp  surface_rect_view.hpp  surface_shape.cpp  surface_shape.hpp  surface_shape.inl  surface_test.cpp  transform.hpp
core/region/: cell.cpp  cell.hpp  cell.inl  meson.build  pnl_statement.cpp  pnl_statement.hpp  pnl_statement.inl  region.cpp  region.hpp  region.inl  region_test.cpp  types.hpp
core/ruleset/: effect.cpp  effect.hpp  effect.inl  effect_test.cpp  meson.build  ruleset.cpp  ruleset.hpp  ruleset.inl  ruleset_base.cpp  ruleset_base.hpp  ruleset_load_test.cpp  ruleset_ut.cpp  ruleset_ut.hpp  test_main.cpp  variable_definition.hpp  variable_definition.inl  variable_definition_test.cpp
core/scope/: meson.build  numeric_variable.cpp  numeric_variable.hpp  numeric_variable.inl  scope.cpp  scope.hpp  scope.inl  scope_change_set.cpp  scope_change_set.hpp  scope_change_set.inl  scope_change_set_test.cpp  scope_test.cpp  scope_ut.cpp  scope_ut.hpp  scoped_object.cpp  scoped_object.hpp  string_variable.cpp  string_variable.hpp  string_variable.inl  test_main.cpp  variable_base.hpp  variable_definition.hpp
core/session/: create_improvement_scope_test.cpp  effect_executor.cpp  effect_executor.hpp  effect_executor.inl  effect_executor_test.cpp  effect_instance.cpp  effect_instance.hpp  effect_instance.inl  effect_instance_test.cpp  lua_scope_change_set.cpp  lua_scope_change_set.hpp  lua_scope_change_set.inl  meson.build  session.hpp  session.inl  session_test.cpp  session_ut.cpp  session_ut.hpp
core/system/: meson.build  ruleset.cpp  ruleset.hpp  session.inl  system.cpp  system.hpp
core/terra/: cell.cpp  cell.hpp  cell.inl  civilization.cpp  civilization.hpp  civilization.inl  civilization_test.cpp  meson.build  plane.cpp  plane.hpp  plane.inl  plane_test.cpp  territory.hpp  types.hpp  world.cpp  world.hpp  world.inl  world_test.cpp
core/types/: control_object.cpp  control_object.hpp  error_code.cpp  error_code.hpp  meson.build  scope.hpp  scope.inl  scope_type.cpp  scope_type.hpp  scope_type.inl  serialize_std_base_types.hpp  std_base_types.cpp  std_base_types.hpp  type_helpers.hpp  variable_type.cpp  variable_type.hpp
core/utils/: assert.hpp  comb.cpp  comb.hpp  comb.inl  enum_bitset.hpp  error_message.hpp  logging.hpp  meson.build  minmax.hpp  minmax_test.cpp  non_null_ptr.hpp  non_null_ptr_test.cpp  overloaded.hpp  overriden.hpp  percentile.hpp  serialize.hpp  serialize_containers.hpp  shared_ptr.hpp  string_token.hpp  throw.hpp
fbs/: l10n.fbs  meson.build  world.fbs
fbs/rules/: improvement.fbs  predicate.fbs  ruleset.fbs  terrain.fbs
proto/: meson.build
proto/city/: improvements.proto  placement_rules.proto
proto/geometry/: surface_shape.proto
proto/l10n/: localized_name.proto
proto/region/: cell.proto  improvement.proto  improvements.proto  placement_rules.proto  region.proto
proto/render/: atlas.proto  render.proto
proto/ruleset/: biome.proto  effect.proto  improvements.proto  jobs.proto  placement_rules.proto  projects.proto  region_improvements.proto  resources.proto  terrain.proto  variables.proto
proto/scope/: scope.proto
proto/terra/: cell.proto  plane.proto  world.proto
proto/types/: control_object.proto  scope.proto  scope_type.proto
resources/: README.md  atlas_advanced.kra  atlas_features.kra  atlas_simple.kra  hexagon-bw.png-autosave.kra  hexagon-bw.xcf  simple_atlasxcf.xcf
subprojects/: flatbuffers.wrap  godot-cpp.wrap  protobuf.wrap
subprojects/packagefiles/flatbuffers-23.3.3/: meson.build
subprojects/packagefiles/godot-cpp-4.2/: meson-bindings-generator.py  meson.build
subprojects/packagefiles/lua/: meson.build
subprojects/packagefiles/protobuf-25.2/: meson.build
ui/godot/: meson.build
ui/godot/content/: meson.build
ui/godot/content/worldgen-basic/: export_presets.cfg  meson.build  module.cfg  project.godot
ui/godot/content/worldgen-basic/content/worldgen-basic/: module.cfg  test_script.gd
ui/godot/content/worldgen-basic/content/worldgen-basic/worldgen/: simple.gd
ui/godot/content/worldgen-basic/content/worldgen-basic/worldgen/ui/: main.tscn  selector.gd
ui/godot/module/: init.cpp  meson.build  register_types.cpp  sichunt.gdextension  test_main.cpp
ui/godot/module/content/: worldgen-basic.pck
ui/godot/module/game/: pnl_object.cpp  pnl_object.hpp  pnl_statement.hpp  ruleset.hpp  ruleset_object.cpp  ruleset_object.hpp
ui/godot/module/region/: cell_object.cpp  cell_object.hpp  region.hpp  region_object.cpp  region_object.hpp  region_test.cpp
ui/godot/module/scope/: scope.hpp  scope_mixin.hpp  scope_object.cpp  scope_object.hpp
ui/godot/module/session/: session.hpp  session_object.cpp  session_object.hpp
ui/godot/module/system/: spdlog_sink.hpp  surface_event.cpp  surface_event.hpp  system.cpp  system.hpp
ui/godot/module/terra/: plane.hpp  plane_object.cpp  plane_object.hpp  world.hpp  world_object.cpp  world_object.hpp
ui/godot/module/types/: godot_base_types.hpp  godot_serialize.hpp
ui/godot/module/utils/: cast_qrs.hpp  fmt.hpp  to_string.hpp
ui/godot/project/: .gut_editor_config.json  RegionSurface.gd  WorldSurface.gd  WorldViewCamera.gd  export_presets.cfg  icon.svg.import  project.godot  region_map.gd  region_map.tscn  root_map.gd  root_map.gd.uid  root_map.tscn  sichunt.gdextension  sichunt.gdextension.uid  view_camera.gd  view_camera.gd.uid  view_camera.tscn  world_map.gd  world_map.tscn
ui/godot/project/central/: central_system.gd  load_manager.gd  load_screen.tscn
ui/godot/project/content/: README.md
ui/godot/project/game/: current_game.gd  current_game.gd.uid  game.gd  game.gd.uid  global_signals_bus.gd  (+3 more)
utils/: constants.hpp  enum_array.hpp  enum_bitset.hpp  image.cpp  image.hpp  image_test.cpp  meson.build  stb_image.cpp  strong_typedef.hpp
(+2401 files in other folders)
